Reskin: Fix #2022 - Moratarium fields alignment

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -7643,6 +7643,15 @@ span.required {
 .input-group-sm > .input-group-btn > .btn {
   border-radius: 0; }
 
+.input-mini-small {
+  width: 20px; }
+
+.input-mini-medium {
+  width: 30px; }
+
+.input-smaller {
+  width: 65px; }
+
 .input-lg, .input-group-lg > .form-control,
 .input-group-lg > .input-group-addon,
 .input-group-lg > .input-group-btn > .btn,
